cabal-version:      2.4
name:               adventofcode
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Paul Caporn
maintainer:         paul.caporn@bbc.co.uk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Day1, Day2, Day3, Day4, Day5, 
                      Day6, Day7, Day8, Day9, Day10, 
                      Day11, Day12, Day13, Day14, Day15, 
                      Day16, Day17 Utils

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    split ^>=0.2.3.4, base ^>=4.14.3.0, containers, regex-posix, heap
    hs-source-dirs:   src
    default-language: Haskell2010

executable adventofcode
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    adventofcode, base ^>=4.14.3.0 
    hs-source-dirs:   app
    default-language: Haskell2010
